--- a/frontend_cipher_tool/package.json
+++ b/frontend_cipher_tool/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/material": "^5.0.4",
+    "@mui/styles": "^5.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
