--- a/frontend_cipher_tool/package.json
+++ b/frontend_cipher_tool/package.json
@@ -16,8 +16,11 @@
     "@mui/styles": "^5.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.0",
     "react-device-detect": "^2.1.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-tabs": "^3.2.2"
   },
   "devDependencies": {
     "@types/react": "17.0.31",
