--- a/frontend_cipher_tool/package.json
+++ b/frontend_cipher_tool/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0",
