--- a/frontend_cipher_tool/package.json
+++ b/frontend_cipher_tool/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
+    "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "next": "11.1.2",
+    "notistack": "^2.0.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-device-detect": "^2.1.1",
