--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -8,7 +8,7 @@
         <version>2.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.johson.app</groupId>
+    <groupId>CORE.RestApiApplication</groupId>
     <artifactId>Backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>baobaoCipherAPI</name>
