update thuật toán JAVA không hỗ trợ

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -49,6 +49,15 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.69</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
