--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -5,17 +5,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.6</version>
+        <version>2.6.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>CORE.RestApiApplication</groupId>
-    <artifactId>Backend</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>baobaoCipherAPI</name>
     <packaging>war</packaging>
-    <description>Bao Bao Cipher</description>
+    <name>CORE</name>
+    <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -25,47 +25,88 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+
+        <dependency>
+
             <groupId>commons-io</groupId>
+
             <artifactId>commons-io</artifactId>
+
             <version>2.6</version>
+
         </dependency>
+
+
+
         <dependency>
+
             <groupId>com.google.guava</groupId>
+
             <artifactId>guava</artifactId>
+
             <version>24.1.1-jre</version>
+
         </dependency>
+
+
+
         <dependency>
+
             <groupId>org.jetbrains</groupId>
+
             <artifactId>annotations</artifactId>
+
             <version>RELEASE</version>
+
             <scope>compile</scope>
+
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+
+
+
+
         <dependency>
+
             <groupId>org.bouncycastle</groupId>
+
             <artifactId>bcprov-jdk15on</artifactId>
+
             <version>1.69</version>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>2.3.3</version>
+
         </dependency>
 
+
+
+        <dependency>
+
+            <groupId>jakarta.xml.bind</groupId>
+
+            <artifactId>jakarta.xml.bind-api</artifactId>
+
+        </dependency>
+
+
+
+        <dependency>
+
+            <groupId>jakarta.xml.bind</groupId>
+
+            <artifactId>jakarta.xml.bind-api</artifactId>
+
+            <version>2.3.3</version>
+
+        </dependency>
 
     </dependencies>
 
