--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "react-device-detect": "^2.1.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-loading": "^2.0.3",
     "react-tabs": "^3.2.2"
   },
   "devDependencies": {
